--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "milogreen.github.io",
-  "homepage": "https://milogreen.github.io",
+  "homepage": "https://milogreen.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-	"predeploy": "yarn run build",
+	"predeploy": "yarn build",
 	"deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
