--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "milogreen.github.io",
-  "homepage": "https://milogreen.github.io/milogreen.github.io",
+  "homepage": "https://milogreen.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
